[package]
name = "twobit_website"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
# hyper = { version = "0.14.7", features = ["full"]}
# tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
# pretty_env_logger = "0.4.0"
axum = "0.6.11"
tokio = { version = "1.5.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
